--- a/09_intro_to_css_frameworks/footer.html
+++ b/09_intro_to_css_frameworks/footer.html
@@ -14,7 +14,7 @@
                 <div class="container px-6 py-12 mx-auto">
                     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2 sm:gap-y-10 lg:grid-cols-4">
                         <div class="sm:col-span-2">
-                            <h1 class="ml-2 max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white">Subscribe to our newsletter and stay updated.</h1>
+                            <h1 class="ml-2 max-w-lg text-xl font-semibold tracking-tight text-[#313131] xl:text-2xl dark:text-white">Subscribe to our newsletter for updates.</h1>
                             <div class="flex flex-col mx-auto mt-6 space-y-3 md:space-y-0 md:flex-row">
                                 <input class="px-4 py-2 mx-2 text-[#313131] bg-white border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]" placeholder="Email Address" id="email" type="text">
                                 <button class="px-4 py-2 text-[#313131] bg-white border rounded-md dark:bg-[#313131] dark:text-white dark:border-[#313131] focus:border-[#d86943] dark:focus:border-[#d86943] focus:outline-none focus:ring focus:ring-opacity-40 focus:ring-[#d86943]">
